--- a/netlify.toml
+++ b/netlify.toml
@@ -17,5 +17,5 @@
   status = 200
 
 [functions]
-  directory = "netlify/functions"
-  included_files = ["netlify/functions/**"]
+  node_bundler = "esbuild"
+  external_node_modules = ["bcryptjs", "pg", "pg-native"]
